# continew-admin

./: README.md  manage.py  pyproject.toml
apps/system/menus/: apps.py  models.py  serializers.py  urls.py  views.py
apps/system/menus/migrations/: 0001_initial.py
apps/system/roles/: apps.py  models.py  serializers.py  urls.py  views.py
apps/system/roles/migrations/: 0001_initial.py
apps/system/users/: apps.py  models.py  serializers.py  urls.py  views.py
apps/system/users/migrations/: 0001_initial.py
continew/: asgi.py  settings.py  urls.py  wsgi.py
utils/: base_models.py  base_viewset.py
